Codigo fuente/src/z80/mafeParser.java
// Generated from C:/Users/Zylfrox/IdeaProjects/Test\mafe.g4 by ANTLR 4.7.2
package z80;
    import java.util.Map;
    import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mafeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAMA=1, VAR=2, VEC=3, SUMA=4, RESTA=5, MULT=6, DIVI=7, AND=8, OR=9, 
		NOT=10, IF=11, ELSE=12, FOR=13, WHILE=14, MAYORI=15, MAYORQ=16, MENORI=17, 
		MENORQ=18, EQUIVA=19, NOEQUIVA=20, ASIGNAR=21, LLAVE_ABRE=22, LLAVE_CIERRA=23, 
		PAR_ABRE=24, PAR_CIERRA=25, SEMICOLON=26, ID=27, NUMERO=28, ESPACIOS=29;
	public static final int
		RULE_program = 0, RULE_sentencia = 1, RULE_expresion = 2, RULE_ciclofor = 3, 
		RULE_ifelse = 4, RULE_sentbooleana = 5, RULE_sentboolenanawhile = 6, RULE_ciclowhile = 7, 
		RULE_var_decl = 8, RULE_vec_decl = 9, RULE_var_asign_n = 10, RULE_var_asign_v = 11, 
		RULE_suma = 12, RULE_resta = 13, RULE_multiplicacion = 14, RULE_division = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "sentencia", "expresion", "ciclofor", "ifelse", "sentbooleana", 
			"sentboolenanawhile", "ciclowhile", "var_decl", "vec_decl", "var_asign_n", 
			"var_asign_v", "suma", "resta", "multiplicacion", "division"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'var'", "'vec'", "'+'", "'-'", "'*'", "'/'", "'&&'", 
			"'||'", "'!'", "'if'", "'else'", "'for'", "'while'", "'>='", "'>'", "'<='", 
			"'<'", "'=='", "'!='", "'='", "'{'", "'}'", "'('", "')'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAMA", "VAR", "VEC", "SUMA", "RESTA", "MULT", "DIVI", "AND", 
			"OR", "NOT", "IF", "ELSE", "FOR", "WHILE", "MAYORI", "MAYORQ", "MENORI", 
			"MENORQ", "EQUIVA", "NOEQUIVA", "ASIGNAR", "LLAVE_ABRE", "LLAVE_CIERRA", 
			"PAR_ABRE", "PAR_CIERRA", "SEMICOLON", "ID", "NUMERO", "ESPACIOS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mafe.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Map<String, Object> symbolTable = new HashMap<String,Object>();
	    String assembler = "";
	    String subf = "1";
	    int dirvar=32768;
	    int ifcount = 1;
	    int whilecount = 1;

	public mafeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAMA() { return getToken(mafeParser.PROGRAMA, 0); }
		public TerminalNode ID() { return getToken(mafeParser.ID, 0); }
		public TerminalNode LLAVE_ABRE() { return getToken(mafeParser.LLAVE_ABRE, 0); }
		public TerminalNode LLAVE_CIERRA() { return getToken(mafeParser.LLAVE_CIERRA, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mafeVisitor ) return ((mafeVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(PROGRAMA);
			setState(33);
			match(ID);
			setState(34);
			match(LLAVE_ABRE);
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << VEC) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
				{
				{
				setState(35);
				sentencia();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			match(LLAVE_CIERRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Vec_declContext vec_decl() {
			return getRuleContext(Vec_declContext.class,0);
		}
		public Var_asign_nContext var_asign_n() {
			return getRuleContext(Var_asign_nContext.class,0);
		}
		public Var_asign_vContext var_asign_v() {
			return getRuleContext(Var_asign_vContext.class,0);
		}
		public SumaContext suma() {
			return getRuleContext(SumaContext.class,0);
		}
		public RestaContext resta() {
			return getRuleContext(RestaContext.class,0);
		}
		public MultiplicacionContext multiplicacion() {
			return getRuleContext(MultiplicacionContext.class,0);
		}
		public DivisionContext division() {
			return getRuleContext(DivisionContext.class,0);
		}
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public CicloforContext ciclofor() {
			return getRuleContext(CicloforContext.class,0);
		}
		public CiclowhileContext ciclowhile() {
			return getRuleContext(CiclowhileContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mafeVisitor ) return ((mafeVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				var_decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				vec_decl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(45);
				var_asign_n();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(46);
				var_asign_v();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(47);
				suma();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(48);
				resta();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(49);
				multiplicacion();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(50);
				division();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(51);
				ifelse();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(52);
				ciclofor();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(53);
				ciclowhile();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public String value;
		public Token NUMERO;
		public Token ID;
		public TerminalNode NUMERO() { return getToken(mafeParser.NUMERO, 0); }
		public TerminalNode ID() { return getToken(mafeParser.ID, 0); }
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).exitExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mafeVisitor ) return ((mafeVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expresion);
		try {
			setState(60);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				((ExpresionContext)_localctx).NUMERO = match(NUMERO);
				((ExpresionContext)_localctx).value =  (((ExpresionContext)_localctx).NUMERO!=null?((ExpresionContext)_localctx).NUMERO.getText():null);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				((ExpresionContext)_localctx).ID = match(ID);
				 ((ExpresionContext)_localctx).value =  "(" + (((ExpresionContext)_localctx).ID!=null?((ExpresionContext)_localctx).ID.getText():null) + subf + ")" ;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CicloforContext extends ParserRuleContext {
		public ExpresionContext expresion;
		public TerminalNode FOR() { return getToken(mafeParser.FOR, 0); }
		public TerminalNode PAR_ABRE() { return getToken(mafeParser.PAR_ABRE, 0); }
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(mafeParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(mafeParser.SEMICOLON, i);
		}
		public TerminalNode PAR_CIERRA() { return getToken(mafeParser.PAR_CIERRA, 0); }
		public TerminalNode LLAVE_ABRE() { return getToken(mafeParser.LLAVE_ABRE, 0); }
		public TerminalNode LLAVE_CIERRA() { return getToken(mafeParser.LLAVE_CIERRA, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public CicloforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ciclofor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).enterCiclofor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).exitCiclofor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mafeVisitor ) return ((mafeVisitor<? extends T>)visitor).visitCiclofor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CicloforContext ciclofor() throws RecognitionException {
		CicloforContext _localctx = new CicloforContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ciclofor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(FOR);
			setState(63);
			match(PAR_ABRE);
			setState(64);
			((CicloforContext)_localctx).expresion = expresion();

			                String temp1 = ((CicloforContext)_localctx).expresion.value;
			                assembler += "\n loop_init:";
			                assembler += "\n LD H, "+temp1;
			            
			setState(66);
			match(SEMICOLON);
			setState(67);
			((CicloforContext)_localctx).expresion = expresion();

			                assembler += "\n loop_cond:";
			                String temp2 = ((CicloforContext)_localctx).expresion.value;
			                assembler += "\n LD A, "+temp2;
			                assembler += "\n CP H";
			                assembler += "\n JP Z, loop_end";
			            
			setState(69);
			match(SEMICOLON);
			setState(70);
			((CicloforContext)_localctx).expresion = expresion();

			                String temp3 = ((CicloforContext)_localctx).expresion.value;
			            
			setState(72);
			match(PAR_CIERRA);
			setState(73);
			match(LLAVE_ABRE);

			                assembler += "\n loop_body:";
			            
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << VEC) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
				{
				{
				setState(75);
				sentencia();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			               assembler += "\n loop_next:";
			               assembler += "\n INC H";
			               assembler += "\n JP loop_cond";
			            
			setState(82);
			match(LLAVE_CIERRA);

			               assembler += "\n loop_end:";
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfelseContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(mafeParser.IF, 0); }
		public TerminalNode PAR_ABRE() { return getToken(mafeParser.PAR_ABRE, 0); }
		public SentbooleanaContext sentbooleana() {
			return getRuleContext(SentbooleanaContext.class,0);
		}
		public TerminalNode PAR_CIERRA() { return getToken(mafeParser.PAR_CIERRA, 0); }
		public List<TerminalNode> LLAVE_ABRE() { return getTokens(mafeParser.LLAVE_ABRE); }
		public TerminalNode LLAVE_ABRE(int i) {
			return getToken(mafeParser.LLAVE_ABRE, i);
		}
		public List<TerminalNode> LLAVE_CIERRA() { return getTokens(mafeParser.LLAVE_CIERRA); }
		public TerminalNode LLAVE_CIERRA(int i) {
			return getToken(mafeParser.LLAVE_CIERRA, i);
		}
		public TerminalNode ELSE() { return getToken(mafeParser.ELSE, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).enterIfelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).exitIfelse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mafeVisitor ) return ((mafeVisitor<? extends T>)visitor).visitIfelse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfelseContext ifelse() throws RecognitionException {
		IfelseContext _localctx = new IfelseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifelse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(IF);

			                int actual = ifcount;
			                ifcount = ifcount+1;
			                assembler += "\n If"+actual+":";
			            
			setState(87);
			match(PAR_ABRE);
			setState(88);
			sentbooleana(actual);
			setState(89);
			match(PAR_CIERRA);

			                assembler += "\n Then"+actual+":";
			            
			setState(91);
			match(LLAVE_ABRE);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << VEC) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
				{
				{
				setState(92);
				sentencia();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(LLAVE_CIERRA);

			                assembler += "\n jp Endif"+actual;
			            
			setState(100);
			match(ELSE);

			                assembler += "\n Else"+actual+":";
			            
			setState(102);
			match(LLAVE_ABRE);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << VEC) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << ID))) != 0)) {
				{
				{
				setState(103);
				sentencia();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(LLAVE_CIERRA);

			                assembler += "\n Endif"+actual+":";
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentbooleanaContext extends ParserRuleContext {
		public int actual;
		public ExpresionContext expresion;
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public TerminalNode MAYORQ() { return getToken(mafeParser.MAYORQ, 0); }
		public TerminalNode MENORQ() { return getToken(mafeParser.MENORQ, 0); }
		public TerminalNode MENORI() { return getToken(mafeParser.MENORI, 0); }
		public TerminalNode MAYORI() { return getToken(mafeParser.MAYORI, 0); }
		public TerminalNode EQUIVA() { return getToken(mafeParser.EQUIVA, 0); }
		public TerminalNode NOEQUIVA() { return getToken(mafeParser.NOEQUIVA, 0); }
		public SentbooleanaContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SentbooleanaContext(ParserRuleContext parent, int invokingState, int actual) {
			super(parent, invokingState);
			this.actual = actual;
		}
		@Override public int getRuleIndex() { return RULE_sentbooleana; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).enterSentbooleana(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mafeListener ) ((mafeListener)listener).exitSentbooleana(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mafeVisitor ) return ((mafeVisitor<? extends T>)visitor).visitSentbooleana(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentbooleanaContext sentbooleana(int actual) throws RecognitionException {
		SentbooleanaContext _localctx = new SentbooleanaContext(_ctx, getState(), actual);
		enterRule(_localctx, 10, RULE_sentbooleana);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				((SentbooleanaContext)_localctx).expresion = expresion();
				String temp1 = ((SentbooleanaContext)_localctx).expresion.value;
				setState(114);
				match(MAYORQ);
				setState(115);
				((SentbooleanaContext)_localctx).expresion = expresion();
				String temp2 = ((SentbooleanaContext)_localctx).expresion.value;
